@startuml

interface Pagamento {
    + processarPagamento(valor: double)
}

class PagamentoBanco implements Pagamento {
    + processarPagamento(valor: double)
}

class PagamentoPayPal {
    + realizarTransacao(quantia: double)
}

class PagamentoPayPalAdapter implements Pagamento {
    - pagamentoPayPal: PagamentoPayPal
    + processarPagamento(valor: double)
}

Pagamento <|.. PagamentoBanco
Pagamento <|.. PagamentoPayPalAdapter
PagamentoPayPalAdapter ..> PagamentoPayPal : "Adapta chamada para"


@enduml
